; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_raw1394.c___alloc_pending_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ieee1394/extr_raw1394.c___alloc_pending_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pending_request = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.pending_request* (i32)* @__alloc_pending_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.pending_request* @__alloc_pending_request(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pending_request*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.pending_request* @kzalloc(i32 4, i32 %4)
  store %struct.pending_request* %5, %struct.pending_request** %3, align 8
  %6 = load %struct.pending_request*, %struct.pending_request** %3, align 8
  %7 = icmp ne %struct.pending_request* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load %struct.pending_request*, %struct.pending_request** %3, align 8
  %10 = getelementptr inbounds %struct.pending_request, %struct.pending_request* %9, i32 0, i32 0
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = load %struct.pending_request*, %struct.pending_request** %3, align 8
  ret %struct.pending_request* %13
}

declare dso_local %struct.pending_request* @kzalloc(i32, i32) #1

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
